# berrylan

./: .gitignore  CMakeLists.txt  README.md  berrylan.desktop.in  berrylan.pro  clickable.yaml  clipboardhelper.cpp  clipboardhelper.h  main.cpp  main.qml  manifest.json.in  permissionhelper.cpp  permissionhelper.h  permissionhelperandroid.cpp  permissionhelperandroid.h  permissionhelperios.cpp  permissionhelperios.h  permissionhelperios.mm  qml.qrc  qtquickcontrols2.conf  version.txt
android/: AndroidManifest.xml  build.gradle  gradlew
android/gradle/wrapper/: gradle-wrapper.properties
android/res/drawable-hdpi/: splash.xml
android/res/values/: libs.xml
components/: BerryLanHeader.qml  BerryLanItemDelegate.qml  BerryLanPage.qml  ColorIcon.qml  HelpPage.qml  StatusView.qml  WaitView.qml
images/: .directory
ios/: Info.plist.in  LaunchScreen1.xib  exportappicons.sh
ios/AppIcons.xcassets/AppIcon.appiconset/: Contents.json
styles/: Button.qml  TextField.qml  berrylanbusyindicator.cpp  berrylanbusyindicator.h
translations/: berrylan-bg.ts  berrylan-cs.ts  berrylan-de_DE.qm  berrylan-de_DE.ts  berrylan-en.ts  berrylan-en_US.ts  berrylan-es.ts  berrylan-fr.ts  berrylan-hu.ts  berrylan-it.ts  berrylan-ko.ts  berrylan-nl.ts  berrylan-pt.ts
ubports/: berrylan.apparmor  berrylan.desktop
wifisetup/: bluetoothdevice.cpp  bluetoothdevice.h  bluetoothdeviceinfo.cpp  bluetoothdeviceinfo.h  bluetoothdeviceinfos.cpp  bluetoothdeviceinfos.h  bluetoothdiscovery.cpp  bluetoothdiscovery.h  btwifisetup.cpp  btwifisetup.h  networkmanagercontroller.cpp  networkmanagercontroller.h  wirelessaccesspoint.cpp  wirelessaccesspoint.h  wirelessaccesspoints.cpp  wirelessaccesspoints.h  wirelessaccesspointsproxy.cpp  wirelessaccesspointsproxy.h  wirelesssetupmanager.cpp  wirelesssetupmanager.h
wifisetupmock/: bluetoothdeviceinfomock.cpp  bluetoothdeviceinfomock.h  bluetoothdeviceinfosmock.cpp  bluetoothdeviceinfosmock.h  bluetoothdevicemock.cpp  bluetoothdevicemock.h  bluetoothdiscoverymock.cpp  bluetoothdiscoverymock.h  networkmanagercontrollermock.cpp  networkmanagercontrollermock.h  wirelessaccesspointmock.cpp  wirelessaccesspointmock.h  wirelessaccesspointsmock.cpp  wirelessaccesspointsmock.h  wirelessaccesspointsproxymock.cpp  wirelessaccesspointsproxymock.h  wirelesssetupmanagermock.cpp  wirelesssetupmanagermock.h
